syntax = "proto3";
package sedachain.batching.v1;

import "gogoproto/gogo.proto";
import "sedachain/batching/v1/batching.proto";

option go_package = "github.com/sedaprotocol/seda-chain/x/batching/types";

// GenesisState defines the batching module's genesis state.
message GenesisState {
  // current_batch_number is the batch number of the most recently-
  // created batch.
  uint64 current_batch_number = 1;
  repeated Batch batches = 2 [ (gogoproto.nullable) = false ];
  repeated TreeEntry tree_entries = 3 [ (gogoproto.nullable) = false ];
  repeated DataResult data_results = 4 [ (gogoproto.nullable) = false ];
  repeated BatchAssignment batch_assignments = 5
      [ (gogoproto.nullable) = false ];
  repeated BatchSignatures batch_signatures = 6
      [ (gogoproto.nullable) = false ];
  Params params = 7 [ (gogoproto.nullable) = false ];
}

// BatchAssignment represents a batch assignment for genesis export
// and import.
message BatchAssignment {
  uint64 batch_number = 1;
  string data_request_id = 2;
}

// TreeEntry represents a tree entry for genesis export and import.
message TreeEntry {
  // K1 is the first part of the key. It represents the batch number.
  uint64 k1 = 1;
  // K2 is the second part of the key. It is empty for a data result
  // tree entry and validator address for a validator tree entry.
  bytes k2 = 2;
  bytes entry = 3;
}
